# rz-embed

./: Cargo.toml  Dockerfile  README.md  setup.py
example-app/: Cargo.toml
example-app/src/: main.rs  main_generic.rs  main_rocket.rs
example-app/src/frontend/: index.html
example-app/src/some-data/: ipsum.md  ipsum.xml
rz-embed/: Cargo.toml
rz-embed/src/: lib.rs  main.rs
rz_embed/: __init__.py  __main__.py
rz_embed/templates/: decompress.rs  handler.rs  header.rs
