[package]
name = "rz-embed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
flate2 = "1.0.30"
log = "0.4.21"
regex = "1.10.4"
walkdir = "2.5.0"
