[package]
name = "rz-embed"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "rz-embed implements a simple proc-macro for embedding directory trees in rust binaries."
repository = "https://github.com/mrpew/rz-embed"
readme = "README.md"
keywords = ["macro"]
categories = ["development-tools::build-utils"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.30"
lazy_static = "1.4.0"
proc-macro2 = { version = "1.0.82", features = ["span-locations"] }
quote = "1.0.36"
regex = "1.10.4"
syn = "2.0.64"
walkdir = "2.5.0"

[lib]
proc-macro = true
